--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </p>
       <div class="screenshot">
         <img
-          src="YOUR_SCREENSHOT_URL_HERE"
+          src="https://github.com/datao2025/mindo-otp-optin/edit/main/mindo_phone_entry.png"
           alt="Mindo mobile app screen: user enters phone number and taps Next to request an OTP code"
         />
       </div>
